[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/GroundTileset.tres" type="TileSet" id=1]
[ext_resource path="res://src/Managers/TurnManager.gd" type="Script" id=2]
[ext_resource path="res://Resources/LaserScorch.tres" type="TileSet" id=3]
[ext_resource path="res://resources/WireTileset.tres" type="TileSet" id=5]
[ext_resource path="res://src/Managers/BoardManager/BoardManager.gd" type="Script" id=6]
[ext_resource path="res://src/Managers/BoardManager/Grid/EnergyGrid.gd" type="Script" id=7]
[ext_resource path="res://src/Managers/BoardManager/Grid/ObjectGrid/EntityGrid.gd" type="Script" id=8]
[ext_resource path="res://src/Levels/Level.gd" type="Script" id=9]
[ext_resource path="res://src/Entity/Player/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Managers/BoardManager/Grid/BlockingGrid.gd" type="Script" id=11]
[ext_resource path="res://src/Managers/BoardManager/Grid/ObjectGrid/MachineGrid.gd" type="Script" id=12]

[node name="LevelTemplate" type="Node2D"]
script = ExtResource( 9 )

[node name="TurnManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="BoardManager" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="LevelGrid" type="TileMap" parent="BoardManager"]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 40, 20 )
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0 )

[node name="NumberGrid" type="TileMap" parent="BoardManager"]
format = 1

[node name="NumberGridBig" type="TileMap" parent="BoardManager"]
format = 1

[node name="WireTileset" type="TileMap" parent="BoardManager"]
mode = 1
tile_set = ExtResource( 5 )
cell_size = Vector2( 40, 20 )
format = 1

[node name="LaserScorch" type="TileMap" parent="BoardManager"]
mode = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 40, 20 )
format = 1

[node name="EnergyGrid" type="Node" parent="BoardManager"]
script = ExtResource( 7 )

[node name="EntityGrid" type="Node" parent="BoardManager"]
script = ExtResource( 8 )

[node name="BlockingGrid" type="Node" parent="BoardManager/EntityGrid"]
script = ExtResource( 11 )

[node name="MachineGrid" type="Node" parent="BoardManager"]
script = ExtResource( 12 )

[node name="BlockingGrid" type="Node" parent="BoardManager/MachineGrid"]
script = ExtResource( 11 )

[node name="CanvasModulate" type="CanvasModulate" parent="BoardManager"]
color = Color( 0.188235, 0.164706, 0.164706, 1 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 1, 8 )
